--- a/ms/figures.Rmd
+++ b/ms/figures.Rmd
@@ -196,96 +196,89 @@ dev.off()
 # Establishment
 
 ```{r}
-results <- readRDS(here("output","results.rds"))
 types <- read_csv(here('data', 'types.csv')) %>% 
-  select(-vegheight) %>% 
-  mutate(name = ifelse(category == 'wetland', paste0(paste0('*',name),'*'), name))
-
-arith <- results$arithmetic %>% 
-  bind_rows(.id = "species") %>% 
-  filter(!(n == 0 & daa < 10)) %>% 
-  rename(type = nin) %>% 
-  left_join(types, by = 'type') %>% 
-  select(-daa, -n, -density) %>% 
-  mutate(modeled = FALSE)
+  mutate(name = ifelse(category == 'wetland', paste0(paste0('*',name),'*'), name)) %>% 
+  rename(nin = type) %>% 
+  select(-vegheight, -category, -structuring)
   
-est <- results$model.preds %>% 
-  rename(type = nin) %>% 
-  left_join(types, by = 'type') %>% 
-  mutate(modeled = TRUE)
-
-dat <- bind_rows(est, arith) %>% 
-  filter(type %in% unique(pull(est, type)))
-```
-
-## by height class
-
-```{r}
-csize <- 3
-plotting <- est %>% 
-  mutate(hgtclassname = if_else(hgtclass == 1, '30 cm \u2264 height < 100 cm',
-                                '100 cm \u2264 height'))
-
-d <- filter(plotting, species == "P.sitchensis-lutzii", randomseed == 2) %>% 
-  arrange(desc(hgtclass)) %>% 
-  mutate(name = fct_reorder(name, fit, first))
-col <- '#984ea3'
-g1 <- ggplot(d, aes(x = fit, y = name)) + 
-  geom_blank() +
-  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
-  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = col, size = 1) +
-  geom_point(color = col, size = csize) +
-  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
-  coord_cartesian(xlim = c(1e-4, 1e2)) +
-  facet_grid(cols = vars(hgtclassname)) +
-  theme_light() + 
+toptheme <- theme_light() + 
   theme(axis.text.y = element_markdown(),
         axis.title = element_blank(),
         axis.ticks = element_blank(),
         strip.background =element_rect(fill="white"),
         strip.text = element_text(colour = "black"),
         panel.spacing = unit(1, "lines"))
-
-d <- filter(plotting, species == "P.abies", randomseed == 2) %>% 
-  arrange(desc(hgtclass)) %>% 
-  mutate(name = fct_reorder(name, fit, first))
-col <- '#377eb8'
-g2 <- ggplot(d, aes(x = fit, y = name)) + 
-  geom_blank() +
-  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
-  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = col, size = 1) +
-  geom_point(color = col, size = csize) +
-  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
-  coord_cartesian(xlim = c(1e-5, 1e1)) +
-  facet_grid(cols = vars(hgtclassname)) +
-  theme_light() +
+middletheme <- theme_light() + 
   theme(axis.text.y = element_markdown(),
         axis.title = element_blank(),
         axis.ticks = element_blank(),
         strip.background =element_blank(),
         strip.text = element_blank(),
         panel.spacing = unit(1, "lines"))
-
-d <- filter(plotting, species == "Larix", randomseed == 2) %>% 
-  arrange(desc(hgtclass)) %>% 
-  mutate(name = fct_reorder(name, fit, first))
-col <- '#4daf4a'
-g3 <- ggplot(d, aes(x = fit, y = name)) + 
-  geom_blank() +
-  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
-  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = col, size = 1) +
-  geom_point(color = col, size = csize) +
-  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
-  coord_cartesian(xlim = c(1e-3, 1e3)) +
-  facet_grid(cols = vars(hgtclassname)) +
-  labs(x = 'relative establishment likelihood') +
-  theme_light() +
+bottomtheme <- theme_light() + 
   theme(axis.title.y=element_blank(),
         axis.text.y=element_markdown(),
         axis.ticks = element_blank(),
         strip.background =element_blank(),
         strip.text = element_blank(),
         panel.spacing = unit(1, "lines"))
+csize <- 3
+coltop <- '#984ea3'
+colmid <- '#377eb8'
+colbot <- '#4daf4a'
+```
+
+## by height class
+
+```{r}
+results <- readRDS(here("output","results-models.rds"))
+plotting <- results %>% 
+  filter(!is.na(randomseed)) %>% 
+  select(-data, -model) %>% 
+  unnest(preds) %>% 
+  left_join(types, by = "nin") %>% 
+  mutate(hgtclassname = if_else(hgtclass == 1, '30 cm \u2264 height < 100 cm',
+                                '100 cm \u2264 height'))
+
+d <- filter(plotting, species == "P.sitchensis-lutzii", randomseed == 2) %>% 
+  arrange(desc(hgtclass)) %>% 
+  mutate(name = fct_reorder(name, fit, first))
+g1 <- ggplot(d, aes(x = fit, y = name)) + 
+  geom_blank() +
+  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
+  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = coltop, size = 1) +
+  geom_point(color = coltop, size = csize) +
+  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  coord_cartesian(xlim = c(1e-4, 1e2)) +
+  facet_grid(cols = vars(hgtclassname)) +
+  toptheme
+
+d <- filter(plotting, species == "P.abies", randomseed == 2) %>% 
+  arrange(desc(hgtclass)) %>% 
+  mutate(name = fct_reorder(name, fit, first))
+g2 <- ggplot(d, aes(x = fit, y = name)) + 
+  geom_blank() +
+  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
+  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = colmid, size = 1) +
+  geom_point(color = colmid, size = csize) +
+  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  coord_cartesian(xlim = c(1e-5, 1e1)) +
+  facet_grid(cols = vars(hgtclassname)) +
+  middletheme
+
+d <- filter(plotting, species == "Larix", randomseed == 2) %>% 
+  arrange(desc(hgtclass)) %>% 
+  mutate(name = fct_reorder(name, fit, first))
+g3 <- ggplot(d, aes(x = fit, y = name)) + 
+  geom_blank() +
+  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
+  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = colbot, size = 1) +
+  geom_point(color = colbot, size = csize) +
+  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  coord_cartesian(xlim = c(1e-3, 1e3)) +
+  facet_grid(cols = vars(hgtclassname)) +
+  labs(x = 'relative establishment likelihood') +
+  bottomtheme
 
 layoutheights <- distinct(plotting, species, name) %>% 
   group_by(species) %>% 
@@ -305,73 +298,48 @@ ggsave(g123, filename= 'ggplot.svg',
 ## sensitivity to random height assignment
 
 ```{r}
-plotting <- est %>% 
-  mutate(hgtclassname = if_else(hgtclass == 1, '30 cm \u2264 height < 100 cm',
-                                '100 cm \u2264 height'))
-
-d <- filter(plotting, species == "P.sitchensis-lutzii", !is.na(randomseed)) %>% 
+d <- filter(plotting, species == "P.sitchensis-lutzii") %>% 
   arrange(match(randomseed, c(2, 1, 3)), desc(hgtclass)) %>% 
   mutate(name = fct_reorder(name, fit, first))
-col <- '#984ea3'
 g1 <- ggplot(d, aes(x = fit, y = name, group = randomseed)) + 
   geom_blank() +
   geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
-  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = col, size = 0.5,
+  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = coltop, size = 0.5,
                  position = position_dodge(width = 0.5)) +
-  geom_point(color = col, size = 1, position = position_dodge(width = 0.5)) +
+  geom_point(color = coltop, size = 1, position = position_dodge(width = 0.5)) +
   scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
   coord_cartesian(xlim = c(1e-4, 1e2)) +
   facet_grid(cols = vars(hgtclassname)) +
-  theme_light() + 
-  theme(axis.text.y = element_markdown(),
-        axis.title = element_blank(),
-        axis.ticks = element_blank(),
-        strip.background =element_rect(fill="white"),
-        strip.text = element_text(colour = "black"),
-        panel.spacing = unit(1, "lines"))
+  toptheme
 
-d <- filter(plotting, species == "P.abies", !is.na(randomseed)) %>% 
+d <- filter(plotting, species == "P.abies") %>% 
   arrange(match(randomseed, c(2, 1, 3)), desc(hgtclass)) %>%
   mutate(name = fct_reorder(name, fit, first))
-col <- '#377eb8'
 g2 <- ggplot(d, aes(x = fit, y = name, group = randomseed)) + 
   geom_blank() +
   geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
-  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = col, size = 0.5,
+  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = colmid, size = 0.5,
                  position = position_dodge(width = 0.5)) +
-  geom_point(color = col, size = 1, position = position_dodge(width = 0.5)) +
+  geom_point(color = colmid, size = 1, position = position_dodge(width = 0.5)) +
   scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
   coord_cartesian(xlim = c(1e-5, 1e1)) +
   facet_grid(cols = vars(hgtclassname)) +
-  theme_light() +
-  theme(axis.text.y = element_markdown(),
-        axis.title = element_blank(),
-        axis.ticks = element_blank(),
-        strip.background =element_blank(),
-        strip.text = element_blank(),
-        panel.spacing = unit(1, "lines"))
+  middletheme
 
-d <- filter(plotting, species == "Larix", !is.na(randomseed)) %>% 
+d <- filter(plotting, species == "Larix") %>% 
   arrange(match(randomseed, c(2, 1, 3)), desc(hgtclass)) %>% 
   mutate(name = fct_reorder(name, fit, first))
-col <- '#4daf4a'
 g3 <- ggplot(d, aes(x = fit, y = name, group = randomseed)) + 
   geom_blank() +
   geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
-  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = col, size = 0.5, 
+  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = colbot, size = 0.5, 
                  position = position_dodge(width = 0.5)) +
-  geom_point(color = col, size = 1, position = position_dodge(width = 0.5)) +
+  geom_point(color = colbot, size = 1, position = position_dodge(width = 0.5)) +
   scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
   coord_cartesian(xlim = c(1e-3, 1e3)) +
   facet_grid(cols = vars(hgtclassname)) +
   labs(x = 'relative establishment likelihood') +
-  theme_light() +
-  theme(axis.title.y=element_blank(),
-        axis.text.y=element_markdown(),
-        axis.ticks = element_blank(),
-        strip.background =element_blank(),
-        strip.text = element_blank(),
-        panel.spacing = unit(1, "lines"))
+  bottomtheme
 
 layoutheights <- distinct(plotting, species, name) %>% 
   group_by(species) %>% 
@@ -390,13 +358,33 @@ ggsave(g123, filename= 'establishment-sensitivity-randomseed.svg',
 
 ## vs. density
 
-```{r}
-plotting <- dat
+TODO: Needs fixing
 
-d <- filter(plotting, species == "P.sitchensis-lutzii", is.na(randomseed)) %>% 
-  arrange(modeled, locality) %>% 
+```{r}
+results.dens <- readRDS(here("output","results-densities.rds"))
+plotting.dens <- results.dens %>% 
+  filter(!(n == 0 & daa < 10)) %>% 
+  mutate(modeled = FALSE) %>% 
+  select(-daa, -n, -density)
+
+temp <- results %>% 
+  filter(is.na(randomseed)) %>% 
+  select(species, preds) %>% 
+  unnest(preds)
+ggplot(temp, aes(fit, locality, color = nin)) + geom_point() + coord_cartesian(xlim = c(0,10))
+
+
+plotting.mod <- results %>% 
+  filter(is.na(randomseed)) %>% 
+  select(species, preds) %>% 
+  unnest(preds) %>% 
+  mutate(modeled = TRUE)
+plotting <- bind_rows(plotting.dens, plotting.mod) %>% 
+  left_join(types, by = 'nin')
+
+d <- filter(plotting, species == "P.sitchensis-lutzii") %>% 
+  arrange(modeled, locality) %>%
   mutate(name = fct_reorder(name, fit, last))
-col <- '#984ea3'
 g1 <- ggplot(d, aes(x = fit, y = name)) + 
   geom_blank() +
   geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
@@ -404,24 +392,17 @@ g1 <- ggplot(d, aes(x = fit, y = name)) +
              color = 'grey', alpha = 0.5,
              position = position_jitter(width = 0, height = 0.25)) +
   geom_point(data = filter(d, modeled == FALSE), 
-             color = col, pch = 1, size = csize+1) +
+             color = coltop, pch = 1, size = csize+1) +
   geom_linerange(data = filter(d, modeled, is.na(locality)),
-                 mapping = aes(xmin = ci.l, xmax = ci.u), color = col, size = 1) +
-  geom_point(data = filter(d, modeled, is.na(locality)), color = col, size = csize) +
+                 mapping = aes(xmin = ci.l, xmax = ci.u), color = coltop, size = 1) +
+  geom_point(data = filter(d, modeled, is.na(locality)), color = coltop, size = csize) +
   scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
   coord_cartesian(xlim = c(1e-4, 1e2)) +
-  theme_light() + 
-  theme(axis.text.y = element_markdown(),
-        axis.title = element_blank(),
-        axis.ticks = element_blank(),
-        strip.background =element_rect(fill="white"),
-        strip.text = element_text(colour = "black"),
-        panel.spacing = unit(1, "lines"))
+  toptheme
 
-d <- filter(plotting, species == "P.abies", is.na(randomseed)) %>% 
+d <- filter(plotting, species == "P.abies") %>% 
   arrange(modeled, locality) %>% 
   mutate(name = fct_reorder(name, fit, last))
-col <- '#377eb8'
 g2 <- ggplot(d, aes(x = fit, y = name)) + 
   geom_blank() +
   geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
@@ -429,24 +410,17 @@ g2 <- ggplot(d, aes(x = fit, y = name)) +
              color = 'grey', alpha = 0.5,
              position = position_jitter(width = 0, height = 0.25)) +
   geom_point(data = filter(d, modeled == FALSE), 
-             color = col, pch = 1, size = csize+1) +
+             color = colmid, pch = 1, size = csize+1) +
   geom_linerange(data = filter(d, modeled, is.na(locality)),
-                 mapping = aes(xmin = ci.l, xmax = ci.u), color = col, size = 1) +
-  geom_point(data = filter(d, modeled, is.na(locality)), color = col, size = csize) +
+                 mapping = aes(xmin = ci.l, xmax = ci.u), color = colmid, size = 1) +
+  geom_point(data = filter(d, modeled, is.na(locality)), color = colmid, size = csize) +
   scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
   coord_cartesian(xlim = c(1e-5, 1e1)) +
-  theme_light() +
-  theme(axis.text.y = element_markdown(),
-        axis.title = element_blank(),
-        axis.ticks = element_blank(),
-        strip.background =element_blank(),
-        strip.text = element_blank(),
-        panel.spacing = unit(1, "lines"))
+  middletheme
 
-d <- filter(plotting, species == "Larix", is.na(randomseed)) %>% 
+d <- filter(plotting, species == "Larix") %>% 
   arrange(modeled, locality) %>% 
   mutate(name = fct_reorder(name, fit, last))
-col <- '#4daf4a'
 g3 <- ggplot(d, aes(x = fit, y = name)) + 
   geom_blank() +
   geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
@@ -454,20 +428,14 @@ g3 <- ggplot(d, aes(x = fit, y = name)) +
              color = 'grey', alpha = 0.5,
              position = position_jitter(width = 0, height = 0.25)) +
   geom_point(data = filter(d, modeled == FALSE), 
-             color = col, pch = 1, size = csize+1) +
+             color = colbot, pch = 1, size = csize+1) +
   geom_linerange(data = filter(d, modeled, is.na(locality)),
-                 mapping = aes(xmin = ci.l, xmax = ci.u), color = col, size = 1) +
-  geom_point(data = filter(d, modeled, is.na(locality)), color = col, size = csize) +
+                 mapping = aes(xmin = ci.l, xmax = ci.u), color = colbot, size = 1) +
+  geom_point(data = filter(d, modeled, is.na(locality)), color = colbot, size = csize) +
   scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
   coord_cartesian(xlim = c(1e-3, 1e3)) +
   labs(x = 'relative establishment likelihood') +
-  theme_light() +
-  theme(axis.title.y=element_blank(),
-        axis.text.y=element_markdown(),
-        axis.ticks = element_blank(),
-        strip.background =element_blank(),
-        strip.text = element_blank(),
-        panel.spacing = unit(1, "lines"))
+  bottomtheme
 
 layoutheights <- distinct(plotting, species, name) %>% 
   group_by(species) %>% 
@@ -486,80 +454,63 @@ ggsave(g123, filename= 'establishment-vs-density.svg',
 
 ## sensitivity to offsetting seed rain
 
-```{r, include=FALSE}
-results_sens <- readRDS(here("output","results-sensitivity.rds"))
-sens <- results_sens %>% 
-  rename(type = nin, fit.end = fit)
-plotting <- filter(est, modeled, is.na(locality), is.na(randomseed)) %>% 
-  left_join(sens) %>% 
-  mutate(diff = fit.end - fit)
-
+```{r}
+results.offs <- readRDS(here("output","results-sensitivity-offsetting.rds")) %>% 
+  rename(fit.end = fit)
+plotting <- results %>% 
+  filter(is.na(randomseed)) %>% 
+  select(species, preds) %>% 
+  unnest(preds) %>%
+  filter(is.na(locality)) %>% 
+  left_join(results.offs, by = c('species', 'nin')) %>% 
+  mutate(diff = fit.end - fit) %>% 
+  left_join(types, by = "nin")
+ 
 d <- filter(plotting, species == "P.sitchensis-lutzii") %>% 
   mutate(name = fct_reorder(name, fit, last))
-col <- '#984ea3'
 g1 <- ggplot(d, aes(x = fit, y = name)) + 
   geom_blank() +
   geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
   geom_segment(data = filter(d, diff != 0), 
-               mapping = aes(yend = name, x = fit, xend = fit.end), color = col, 
+               mapping = aes(yend = name, x = fit, xend = fit.end), color = coltop, 
                size = 2, lineend = 'round', linejoin = 'mitre',
                arrow = arrow(length = unit(0.001, "npc"), angle = 45, type = "closed")) +
-  geom_point(data = filter(d, modeled == TRUE, is.na(locality), diff == 0),
-             mapping = aes(x = fit), color = col, size = 2) +  
+  geom_point(data = filter(d, diff == 0),
+             mapping = aes(x = fit), color = coltop, size = 2) +  
   scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
   coord_cartesian(xlim = c(1e-4, 1e2)) +
-  theme_light() + 
-  theme(axis.text.y = element_markdown(),
-        axis.title = element_blank(),
-        axis.ticks = element_blank(),
-        strip.background =element_rect(fill="white"),
-        strip.text = element_text(colour = "black"),
-        panel.spacing = unit(1, "lines"))
+  toptheme
 
 d <- filter(plotting, species == "P.abies") %>% 
   mutate(name = fct_reorder(name, fit, last))
-col <- '#377eb8'
 g2 <- ggplot(d, aes(x = fit, y = name)) + 
   geom_blank() +
   geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
   geom_segment(data = filter(d, diff != 0), 
-               mapping = aes(yend = name, x = fit, xend = fit.end), color = col, 
+               mapping = aes(yend = name, x = fit, xend = fit.end), color = colmid, 
                size = 2, lineend = 'round', linejoin = 'mitre',
                arrow = arrow(length = unit(0.001, "npc"), angle = 45, type = "closed")) +
-  geom_point(data = filter(d, modeled == TRUE, is.na(locality), diff == 0),
-             mapping = aes(x = fit), color = col, size = 2) +  
+  geom_point(data = filter(d, diff == 0),
+             mapping = aes(x = fit), color = colmid, size = 2) +  
   scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
   coord_cartesian(xlim = c(1e-5, 1e1)) +
-  theme_light() +
-  theme(axis.text.y = element_markdown(),
-        axis.title = element_blank(),
-        axis.ticks = element_blank(),
-        strip.background =element_blank(),
-        strip.text = element_blank(),
-        panel.spacing = unit(1, "lines"))
+  middletheme
 
 d <- filter(plotting, species == "Larix") %>% 
   mutate(name = fct_reorder(name, fit, last))
-col <- '#4daf4a'
 g3 <- ggplot(d, aes(x = fit, y = name)) + 
   geom_blank() +
   geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
   geom_segment(data = filter(d, diff != 0), 
-               mapping = aes(yend = name, x = fit, xend = fit.end), color = col, 
+               mapping = aes(yend = name, x = fit, xend = fit.end), color = colbot, 
                size = 2, lineend = 'round', linejoin = 'mitre',
                arrow = arrow(length = unit(0.001, "npc"), angle = 45, type = "closed")) +
-  geom_point(data = filter(d, modeled == TRUE, is.na(locality), diff == 0),
-             mapping = aes(x = fit), color = col, size = 2) +  
+  geom_point(data = filter(d, diff == 0),
+             mapping = aes(x = fit), color = colbot, size = 2) +  
   scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
   coord_cartesian(xlim = c(1e-3, 1e3)) +
   labs(x = 'relative establishment likelihood') +
-  theme_light() +
-  theme(axis.title.y=element_blank(),
-        axis.text.y=element_markdown(),
-        axis.ticks = element_blank(),
-        strip.background =element_blank(),
-        strip.text = element_blank(),
-        panel.spacing = unit(1, "lines"))
+  bottomtheme
 
 layoutheights <- distinct(plotting, species, name) %>% 
   group_by(species) %>% 
