--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -56,17 +56,12 @@ library(kableExtra)
 # Abstract {-}
 
 1. Plantations of alien conifer species are common worldwide, and set to become even more prevalent in coming decades. To minimize the rate at which their offspring --- so-called "wildlings" --- colonize surroundings, and reduce the burden of conifer plantations on native ecosystems, managers need to know which ecosystems are most and least susceptible to wildling establishment. Although readily observable, wildling abundance is not a direct measure of ecosystem susceptibility, because contingent factors like proximity to plantations also shape the realized pattern of ecosystem colonization. 
-~~Apart from ecosystem susceptibility, contingent factors like proximity to plantations also shape patterns of incipient spread, so wildling abundance is not a direct proxy for susceptibility.~~ 
-~~However, patterns in wildling abundance across ecosystems are also shaped by contingent factors, like proximity to plantations, so wildling abundance is not a direct proxy for susceptibility.~~ 
-~~However, patterns of ecosystem colonization are also shaped by contingent factors, like proximity to plantations, so they do not directly reflect susceptibilities.~~ 
-~~In the early stages of spread, however, the abundance of wildlings in a given ecosystem is shaped by contingent factors like its proximity to plantations, and may not reflect its susceptibility.~~
-2. We compared across ecosystems how frequently wildlings establish and survive to a given height, studying three groups of alien conifer species in Norway. We used data from detailed surveys around 76 plantation stands to model the effect of ecosystem type on wildling abundance, adjusting for other influences on wildling abundance at a given location, especially seed rain.
-~~We used data from detailed surveys around 76 plantation stands to model the effect of ecosystem type on wildling abundance, adjusting for other variables that also affect wildling abundance at a given location, especially seed rain.~~ 
-~~We used data from detailed surveys around 76 plantation stands to model the effect of ecosystem type on wildling abundance, accounting for seed rain and also other factors that plausibly affect wildling abundance at a given location.~~
-~~We used data from detailed surveys around 76 plantation stands to model the relationship between wildling abundance, ecosystem type, seed rain, and other factors that plausibly affect wildling abundance at a given location.~~
-3. We found that, for all species, relative establishment likelihood spanned at least three orders of magnitude between the most and least susceptible ecosystems. Agricultural ecosystems were consistently among the least susceptible to wildling establishment and growth (as represented by the abundance of tall wildlings), although they were relatively less resistant to establishment alone (as represented by the abundance of short wildlings). 
-~~Agricultural ecosystems were consistently among the least susceptible to wildlings establishing and growing tall, although they were relatively less resistant to establishment of short wildlings.~~ 
-5. *Synthesis and applications* Management of alien conifer species should be informed by differences in ecosystem susceptibility to wildling establishment and growth observed in the introduced range. In case of ongoing planting, plantation stands should be sited where their surroundings are relatively insusceptible to wildlings. In Norway, stands hemmed in by agriculture are likely to spawn wildlings at rates orders of magnitude lower than stands surrounded by more susceptible ecosystems. In case of ongoing naturalization, managers should be aware that early patterns of wildling colonization may be a poor indicator of long-term susceptibility.
+2. We compared across ecosystems how frequently wildlings establish and grow to a given height, studying three groups of alien conifer species in Norway. We used data from detailed surveys around 76 plantation stands to model the effect of ecosystem type on wildling abundance, adjusting for other influences on wildling abundance at a given location, especially seed rain.
+3. We found that, for all species, relative establishment likelihood spanned at least three orders of magnitude between the most and least susceptible ecosystems. 
+For all species, wildling abundance increased by about three orders of magnitude between the least to the most susceptible ecosystems, all else being equal. 
+We found that agricultural ecosystems were consistently among the ecosystems that suppressed wildling establishment and growth most. 
+Agricultural ecosystems were consistently among the least susceptible to wildling establishment and growth (as represented by the abundance of tall wildlings), although they were relatively less resistant to establishment alone (as represented by the abundance of short wildlings). 
+4. *Synthesis and applications* Management of alien conifer species should be informed by differences in ecosystem susceptibility to wildling establishment and growth observed in the introduced range. In case of ongoing planting, plantation stands should be sited where their surroundings are relatively insusceptible to wildlings. In Norway, stands hemmed in by agriculture are likely to spawn wildlings at rates orders of magnitude lower than stands surrounded by more susceptible ecosystems. In case of ongoing naturalization, managers should be aware that early patterns of wildling colonization may be a poor indicator of long-term susceptibility.
 
 # Keywords {-}
 
