revising abstract to plainer language

--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -55,7 +55,18 @@ library(kableExtra)
 
 # Abstract {-}
 
-1. Plantations of alien conifer species are common worldwide, and set to become even more prevalent in coming decades. To minimize the rate at which their offspring --- so-called "wildlings" --- colonize surroundings, and reduce the burden of conifer plantations on native ecosystems, managers need to know which ecosystems are most and least susceptible to wildling establishment. Although readily observable, wildling abundance is not a direct measure of ecosystem susceptibility, because contingent factors like proximity to plantations also shape the realized pattern of ecosystem colonization. 
+1. Plantations of alien conifer species are common worldwide, and set to become even more prevalent in coming decades.
+To reduce the burden plantations impose on native ecosystems, land managers need to know which ecosystems are most and least susceptible to establishment of "wildling" offspring of each plantation species.
+~~To slow the spread of alien conifers and reduce the burden of their plantations on native ecosystems, land managers need to know which ecosystems are most and least susceptible to establishment of these species.~~
+~~To slow the escape of plantation offspring and reduce the burden plantations impose on native ecosystems, managers need to know which ecosystems are most and least susceptible to establishment of these species.~~
+~~Land managers need to know which ecosystems are most and least susceptible to establishment of plantation offspring --- so-called "wildlings" --- to slow alien spread and reduce the burden of plantations on native ecosystems.~~
+~~To slow offspring escaping plantation boundaries and burdening native ecosystems, managers need to know which ecosystems are most and least susceptible to establishment of so-called "wildlings."~~
+Wildling abundance around plantations can be used to infer ecosystem susceptibility to wildling establishment at an early stage of spread, but various contingencies --- where plantations were planted, for example --- complicate direct comparisons between ecosystems.
+~~Wildling abundance around plantations can be used to infer ecosystem susceptibility to wildling establishment at an early stage of spread, but various contingencies --- where plantations were planted, for example --- make it harder to compare ecosystems on equal footing.~~
+~~Wildling abundance around plantations can be used to infer ecosystem susceptibility to wildling establishment at an early stage of spread, but various contingencies --- where plantations were planted, for example --- impede fair comparison between ecosystems.~~
+~~Wildling abundance around plantations can be used to infer ecosystem susceptibility to wildling establishment at an early stage of spread, but it does not reflect susceptibility directly because contingencies --- like plantation locations --- also affect the observed pattern of colonization.~~   
+~~Although we can readily observe differences in wildling abundance across the ecosystems surrounding plantations, these do not directly reflect ecosystem susceptibility, because contingencies --- like plantation locations --- also affect the observed pattern of colonization.~~
+~~Although readily observable, wildling abundance is not a direct measure of ecosystem susceptibility, because contingent factors like proximity to plantations also shape the realized pattern of ecosystem colonization.~~ 
 2. We compared across ecosystems how frequently wildlings establish and grow to a given height, studying three groups of alien conifer species in Norway. We used data from detailed surveys around 76 plantation stands to model the effect of ecosystem type on wildling abundance, adjusting for other influences on wildling abundance at a given location, especially seed rain.
 3. We found that, for all species, relative establishment likelihood spanned at least three orders of magnitude between the most and least susceptible ecosystems. 
 For all species, wildling abundance increased by about three orders of magnitude between the least to the most susceptible ecosystems, all else being equal. 
